// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkThemeProvider should correctly flatten the themeAttribute prop 1`] = `
<DocumentFragment>
  <div>
    <p>
      Lorem Ipsum
    </p>
  </div>
</DocumentFragment>
`;

exports[`BpkThemeProvider should render correctly 1`] = `
<DocumentFragment>
  <div>
    <p>
      Lorem Ipsum
    </p>
  </div>
</DocumentFragment>
`;

exports[`BpkThemeProvider should render correctly with arbitrary props 1`] = `
<DocumentFragment>
  <div
    id="arbitrary"
  >
    <p>
      Lorem Ipsum
    </p>
  </div>
</DocumentFragment>
`;

exports[`BpkThemeProvider should render correctly with arbitrary user defined style 1`] = `
<DocumentFragment>
  <div
    style="content: user defined;"
  >
    <p>
      Lorem Ipsum
    </p>
  </div>
</DocumentFragment>
`;

exports[`BpkThemeProvider should render correctly with custom component 1`] = `
<DocumentFragment>
  <span>
    <p>
      Lorem Ipsum
    </p>
  </span>
</DocumentFragment>
`;

exports[`BpkThemeProvider should render correctly with custom component function 1`] = `
<DocumentFragment>
  <span>
    <p>
      Lorem Ipsum
    </p>
  </span>
</DocumentFragment>
`;

exports[`BpkThemeProvider should render correctly with custom native component 1`] = `
<DocumentFragment>
  <header>
    <p>
      Lorem Ipsum
    </p>
  </header>
</DocumentFragment>
`;

exports[`BpkThemeProvider should render without theming when theme is missing attributes 1`] = `
<DocumentFragment>
  <div>
    <p>
      Lorem Ipsum
    </p>
  </div>
</DocumentFragment>
`;

exports[`BpkThemeProvider should strip out extraneous theme attributes 1`] = `
<DocumentFragment>
  <div>
    <p>
      Lorem Ipsum
    </p>
  </div>
</DocumentFragment>
`;
